Cleaned data, nasa api pulled 180 days, conducted eda to see correlation

--- a/src/01_cleaning_eda/bt_cleaning.ipynb
+++ b/src/01_cleaning_eda/bt_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "4  40.602563 -115.719777   1    NaN      NaN  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "0                       4.18          13.21          29.9  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
        "4                               0.36  "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
        "[1 rows x 36 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,11 +867,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
     "merged_df.reset_index().to_csv(\"../../data/processed/wildfire_weather.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(21537, 36)"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df.shape"
    ]
   },
   {
@@ -885,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +971,7 @@
        "0               135.5                 2.55  40.602563 -115.719777   1  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,25 +993,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
-    "extra_weather.drop_duplicates(keep='first', inplace=True)"
+    "extra_weather.drop_duplicates(subset=\"ID\", keep='first', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "extra_weather.set_index('ID', inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -1021,9 +1032,148 @@
        "      <th>clear_sky_photosynthetically_active_radiation</th>\n",
        "      <th>all_sky_photosynthetically_active_radiation</th>\n",
        "      <th>all_sky_surface_uv_index</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3.02</td>\n",
+       "      <td>13.91</td>\n",
+       "      <td>27.31</td>\n",
+       "      <td>155.74</td>\n",
+       "      <td>135.5</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   dew_frost_point_2m  wet_bulb_temp_2m  relative_humidity  \\\n",
+       "0                3.02             13.91              27.31   \n",
+       "\n",
+       "   clear_sky_photosynthetically_active_radiation  \\\n",
+       "0                                         155.74   \n",
+       "\n",
+       "   all_sky_photosynthetically_active_radiation  all_sky_surface_uv_index  id  \n",
+       "0                                        135.5                      2.55   1  "
+      ]
+     },
+     "execution_count": 236,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extra_weather.rename(columns={\n",
+    "  'T2MDEW': 'dew_frost_point_2m',\n",
+    "  'T2MWET': 'wet_bulb_temp_2m',\n",
+    "  'RH2M': 'relative_humidity',\n",
+    "  'CLRSKY_SFC_PAR_TOT': 'clear_sky_photosynthetically_active_radiation',\n",
+    "  'ALLSKY_SFC_PAR_TOT': 'all_sky_photosynthetically_active_radiation',\n",
+    "  'ALLSKY_SFC_UV_INDEX': 'all_sky_surface_uv_index',\n",
+    "  'ID': 'id'\n",
+    "}, inplace=True)\n",
+    "\n",
+    "extra_weather.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extra_weather.set_index('id', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2858, 6)"
+      ]
+     },
+     "execution_count": 238,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extra_weather.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>containmentdatetime</th>\n",
+       "      <th>controldatetime</th>\n",
+       "      <th>dailyacres</th>\n",
+       "      <th>discoveryacres</th>\n",
+       "      <th>firecause</th>\n",
+       "      <th>firediscoverydatetime</th>\n",
+       "      <th>incidenttypecategory</th>\n",
+       "      <th>incidenttypekind</th>\n",
+       "      <th>...</th>\n",
+       "      <th>wind_speed_10m_max</th>\n",
+       "      <th>surface_soil_wetness_5cm_below</th>\n",
+       "      <th>surface_soil_wetness_to_bedrock</th>\n",
+       "      <th>wind_speed_2m_mean</th>\n",
+       "      <th>wind_speed_2m_max_mean</th>\n",
+       "      <th>wind_speed_10m_mean</th>\n",
+       "      <th>wind_speed_10m_max_mean</th>\n",
+       "      <th>humidity_mean</th>\n",
+       "      <th>temp_2m_mean</th>\n",
+       "      <th>rain_sum</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ID</th>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -1034,53 +1184,78 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3.02</td>\n",
-       "      <td>13.91</td>\n",
-       "      <td>27.31</td>\n",
-       "      <td>155.74</td>\n",
-       "      <td>135.5</td>\n",
-       "      <td>2.55</td>\n",
+       "      <th>0</th>\n",
+       "      <td>-111.348611</td>\n",
+       "      <td>33.195755</td>\n",
+       "      <td>2020-07-23 05:29:59+00:00</td>\n",
+       "      <td>2020-07-23 05:29:59+00:00</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>2020-07-22 21:51:00+00:00</td>\n",
+       "      <td>WF</td>\n",
+       "      <td>FI</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.84</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>1.41</td>\n",
+       "      <td>3.09</td>\n",
+       "      <td>1.895</td>\n",
+       "      <td>4.18</td>\n",
+       "      <td>13.21</td>\n",
+       "      <td>29.9</td>\n",
+       "      <td>2.6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1 rows × 36 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    dew_frost_point_2m  wet_bulb_temp_2m  relative_humidity  \\\n",
-       "ID                                                            \n",
-       "1                 3.02             13.91              27.31   \n",
+       "             x          y        containmentdatetime  \\\n",
+       "id                                                     \n",
+       "0  -111.348611  33.195755  2020-07-23 05:29:59+00:00   \n",
        "\n",
-       "    clear_sky_photosynthetically_active_radiation  \\\n",
-       "ID                                                  \n",
-       "1                                          155.74   \n",
+       "              controldatetime  dailyacres  discoveryacres firecause  \\\n",
+       "id                                                                    \n",
+       "0   2020-07-23 05:29:59+00:00         8.0             2.5     Human   \n",
        "\n",
-       "    all_sky_photosynthetically_active_radiation  all_sky_surface_uv_index  \n",
-       "ID                                                                         \n",
-       "1                                         135.5                      2.55  "
+       "        firediscoverydatetime incidenttypecategory incidenttypekind  ...  \\\n",
+       "id                                                                   ...   \n",
+       "0   2020-07-22 21:51:00+00:00                   WF               FI  ...   \n",
+       "\n",
+       "    wind_speed_10m_max  surface_soil_wetness_5cm_below  \\\n",
+       "id                                                       \n",
+       "0                 3.84                            0.12   \n",
+       "\n",
+       "   surface_soil_wetness_to_bedrock  wind_speed_2m_mean wind_speed_2m_max_mean  \\\n",
+       "id                                                                              \n",
+       "0                             0.38                1.41                   3.09   \n",
+       "\n",
+       "   wind_speed_10m_mean  wind_speed_10m_max_mean humidity_mean temp_2m_mean  \\\n",
+       "id                                                                           \n",
+       "0                1.895                     4.18         13.21         29.9   \n",
+       "\n",
+       "    rain_sum  \n",
+       "id            \n",
+       "0        2.6  \n",
+       "\n",
+       "[1 rows x 36 columns]"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# extra_weather.rename(columns={\n",
-    "#   'T2MDEW': 'dew_frost_point_2m',\n",
-    "#   'T2MWET': 'wet_bulb_temp_2m',\n",
-    "#   'RH2M': 'relative_humidity',\n",
-    "#   'CLRSKY_SFC_PAR_TOT': 'clear_sky_photosynthetically_active_radiation',\n",
-    "#   'ALLSKY_SFC_PAR_TOT': 'all_sky_photosynthetically_active_radiation',\n",
-    "#   'ALLSKY_SFC_UV_INDEX': 'all_sky_surface_uv_index'\n",
-    "# }, inplace=True)\n",
-    "\n",
-    "extra_weather.head(1)"
+    "merged_df.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,16 +1273,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(39219, 42)"
+       "(2858, 42)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1316,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,22 +1327,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(39219, 42)"
+       "x                                                0\n",
+       "y                                                0\n",
+       "containmentdatetime                              0\n",
+       "controldatetime                                  0\n",
+       "dailyacres                                       0\n",
+       "discoveryacres                                   0\n",
+       "firecause                                        0\n",
+       "firediscoverydatetime                            0\n",
+       "incidenttypecategory                             0\n",
+       "incidenttypekind                                 0\n",
+       "initiallatitude                                  0\n",
+       "initiallongitude                                 0\n",
+       "irwinid                                          0\n",
+       "localincidentidentifier                          0\n",
+       "poocounty                                        0\n",
+       "poodispatchcenterid                              0\n",
+       "poofips                                          0\n",
+       "poostate                                         0\n",
+       "uniquefireidentifier                             0\n",
+       "temp_2m                                          0\n",
+       "temp_2m_max                                      0\n",
+       "humidity                                         0\n",
+       "rain                                             0\n",
+       "wind_speed_2m                                    0\n",
+       "wind_speed_2m_max                                0\n",
+       "wind_speed_10m                                   0\n",
+       "wind_speed_10m_max                               0\n",
+       "surface_soil_wetness_5cm_below                   0\n",
+       "surface_soil_wetness_to_bedrock                  0\n",
+       "wind_speed_2m_mean                               0\n",
+       "wind_speed_2m_max_mean                           0\n",
+       "wind_speed_10m_mean                              0\n",
+       "wind_speed_10m_max_mean                          0\n",
+       "humidity_mean                                    0\n",
+       "temp_2m_mean                                     0\n",
+       "rain_sum                                         0\n",
+       "dew_frost_point_2m                               0\n",
+       "wet_bulb_temp_2m                                 0\n",
+       "relative_humidity                                0\n",
+       "clear_sky_photosynthetically_active_radiation    0\n",
+       "all_sky_photosynthetically_active_radiation      0\n",
+       "all_sky_surface_uv_index                         0\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merged_df[merged_df['dailyacres'] > 1].shape"
+    "merged_df.isna().sum()"
    ]
   },
   {
@@ -1180,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1189,7 +1406,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2109, 42)"
+      ]
+     },
+     "execution_count": 248,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
