--- a/src/03_modeling/JA_modeling(allfires).ipynb
+++ b/src/03_modeling/JA_modeling(allfires).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "id": "fb8fad32-9541-4cec-8c21-0584e8bf6bc9",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,6 @@
     "from sklearn.linear_model import LinearRegression, ridge_regression, Lasso\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
     "from sklearn.decomposition import PCA\n",
-    "import xgboost as xgb\n",
     "from sklearn.metrics import mean_squared_error"
    ]
   },
@@ -51,6 +50,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>id</th>\n",
        "      <th>x</th>\n",
        "      <th>y</th>\n",
        "      <th>containmentdatetime</th>\n",
@@ -60,23 +60,23 @@
        "      <th>firecause</th>\n",
        "      <th>firediscoverydatetime</th>\n",
        "      <th>incidenttypecategory</th>\n",
-       "      <th>incidenttypekind</th>\n",
        "      <th>...</th>\n",
-       "      <th>wind_speed_10m_max_mean_x</th>\n",
-       "      <th>humidity_mean_x</th>\n",
-       "      <th>temp_2m_mean_x</th>\n",
-       "      <th>wind_speed_2m_mean_y</th>\n",
-       "      <th>wind_speed_2m_max_mean_y</th>\n",
-       "      <th>wind_speed_10m_mean_y</th>\n",
-       "      <th>wind_speed_10m_max_mean_y</th>\n",
-       "      <th>humidity_mean_y</th>\n",
-       "      <th>temp_2m_mean_y</th>\n",
+       "      <th>wind_speed_10m_max</th>\n",
+       "      <th>surface_soil_wetness_5cm_below</th>\n",
+       "      <th>surface_soil_wetness_to_bedrock</th>\n",
+       "      <th>wind_speed_2m_mean</th>\n",
+       "      <th>wind_speed_2m_max_mean</th>\n",
+       "      <th>wind_speed_10m_mean</th>\n",
+       "      <th>wind_speed_10m_max_mean</th>\n",
+       "      <th>humidity_mean</th>\n",
+       "      <th>temp_2m_mean</th>\n",
        "      <th>rain_sum</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>-111.348611</td>\n",
        "      <td>33.195755</td>\n",
        "      <td>2020-07-23 05:29:59+00:00</td>\n",
@@ -86,11 +86,10 @@
        "      <td>Human</td>\n",
        "      <td>2020-07-22 21:51:00+00:00</td>\n",
        "      <td>WF</td>\n",
-       "      <td>FI</td>\n",
        "      <td>...</td>\n",
-       "      <td>4.180000</td>\n",
-       "      <td>13.210000</td>\n",
-       "      <td>29.900000</td>\n",
+       "      <td>3.84</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.38</td>\n",
        "      <td>1.410000</td>\n",
        "      <td>3.090000</td>\n",
        "      <td>1.895000</td>\n",
@@ -101,6 +100,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>-115.748812</td>\n",
        "      <td>40.617506</td>\n",
        "      <td>2020-08-03 23:00:00+00:00</td>\n",
@@ -110,11 +110,10 @@
        "      <td>Natural</td>\n",
        "      <td>2020-07-19 23:00:00+00:00</td>\n",
        "      <td>WF</td>\n",
-       "      <td>FI</td>\n",
        "      <td>...</td>\n",
-       "      <td>5.237174</td>\n",
-       "      <td>5.657391</td>\n",
-       "      <td>23.396304</td>\n",
+       "      <td>4.52</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>0.37</td>\n",
        "      <td>1.933913</td>\n",
        "      <td>3.914783</td>\n",
        "      <td>2.865217</td>\n",
@@ -125,6 +124,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>-108.193611</td>\n",
        "      <td>39.858486</td>\n",
        "      <td>2020-08-30 00:00:00+00:00</td>\n",
@@ -134,11 +134,10 @@
        "      <td>Natural</td>\n",
        "      <td>2020-08-29 21:46:00+00:00</td>\n",
        "      <td>WF</td>\n",
-       "      <td>FI</td>\n",
        "      <td>...</td>\n",
-       "      <td>4.754615</td>\n",
-       "      <td>4.731538</td>\n",
-       "      <td>16.121538</td>\n",
+       "      <td>5.82</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.35</td>\n",
        "      <td>1.733846</td>\n",
        "      <td>2.986154</td>\n",
        "      <td>2.993846</td>\n",
@@ -149,6 +148,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>-109.703111</td>\n",
        "      <td>40.227646</td>\n",
        "      <td>2020-10-28 20:15:00+00:00</td>\n",
@@ -158,11 +158,10 @@
        "      <td>Human</td>\n",
        "      <td>2020-10-28 19:37:00+00:00</td>\n",
        "      <td>WF</td>\n",
-       "      <td>FI</td>\n",
        "      <td>...</td>\n",
-       "      <td>4.020000</td>\n",
-       "      <td>2.560000</td>\n",
-       "      <td>5.480000</td>\n",
+       "      <td>4.02</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>0.34</td>\n",
        "      <td>1.250000</td>\n",
        "      <td>2.980000</td>\n",
        "      <td>1.880000</td>\n",
@@ -173,6 +172,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>-110.385511</td>\n",
        "      <td>31.961145</td>\n",
        "      <td>2020-07-10 18:14:59+00:00</td>\n",
@@ -182,11 +182,10 @@
        "      <td>Human</td>\n",
        "      <td>2020-07-09 16:34:59+00:00</td>\n",
        "      <td>WF</td>\n",
-       "      <td>FI</td>\n",
        "      <td>...</td>\n",
-       "      <td>6.800000</td>\n",
-       "      <td>9.950000</td>\n",
-       "      <td>31.235000</td>\n",
+       "      <td>5.90</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.36</td>\n",
        "      <td>3.090000</td>\n",
        "      <td>5.055000</td>\n",
        "      <td>4.265000</td>\n",
@@ -197,16 +196,16 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 43 columns</p>\n",
+       "<p>5 rows × 37 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            x          y        containmentdatetime  \\\n",
-       "0 -111.348611  33.195755  2020-07-23 05:29:59+00:00   \n",
-       "1 -115.748812  40.617506  2020-08-03 23:00:00+00:00   \n",
-       "2 -108.193611  39.858486  2020-08-30 00:00:00+00:00   \n",
-       "3 -109.703111  40.227646  2020-10-28 20:15:00+00:00   \n",
-       "4 -110.385511  31.961145  2020-07-10 18:14:59+00:00   \n",
+       "   id           x          y        containmentdatetime  \\\n",
+       "0   0 -111.348611  33.195755  2020-07-23 05:29:59+00:00   \n",
+       "1   1 -115.748812  40.617506  2020-08-03 23:00:00+00:00   \n",
+       "2   2 -108.193611  39.858486  2020-08-30 00:00:00+00:00   \n",
+       "3   3 -109.703111  40.227646  2020-10-28 20:15:00+00:00   \n",
+       "4   4 -110.385511  31.961145  2020-07-10 18:14:59+00:00   \n",
        "\n",
        "             controldatetime  dailyacres  discoveryacres firecause  \\\n",
        "0  2020-07-23 05:29:59+00:00         8.0             2.5     Human   \n",
@@ -215,35 +214,35 @@
        "3  2020-10-28 20:15:00+00:00         0.1             0.1     Human   \n",
        "4  2020-07-10 18:14:59+00:00         0.1             0.1     Human   \n",
        "\n",
-       "       firediscoverydatetime incidenttypecategory incidenttypekind  ...  \\\n",
-       "0  2020-07-22 21:51:00+00:00                   WF               FI  ...   \n",
-       "1  2020-07-19 23:00:00+00:00                   WF               FI  ...   \n",
-       "2  2020-08-29 21:46:00+00:00                   WF               FI  ...   \n",
-       "3  2020-10-28 19:37:00+00:00                   WF               FI  ...   \n",
-       "4  2020-07-09 16:34:59+00:00                   WF               FI  ...   \n",
+       "       firediscoverydatetime incidenttypecategory  ... wind_speed_10m_max  \\\n",
+       "0  2020-07-22 21:51:00+00:00                   WF  ...               3.84   \n",
+       "1  2020-07-19 23:00:00+00:00                   WF  ...               4.52   \n",
+       "2  2020-08-29 21:46:00+00:00                   WF  ...               5.82   \n",
+       "3  2020-10-28 19:37:00+00:00                   WF  ...               4.02   \n",
+       "4  2020-07-09 16:34:59+00:00                   WF  ...               5.90   \n",
        "\n",
-       "   wind_speed_10m_max_mean_x  humidity_mean_x temp_2m_mean_x  \\\n",
-       "0                   4.180000        13.210000      29.900000   \n",
-       "1                   5.237174         5.657391      23.396304   \n",
-       "2                   4.754615         4.731538      16.121538   \n",
-       "3                   4.020000         2.560000       5.480000   \n",
-       "4                   6.800000         9.950000      31.235000   \n",
+       "   surface_soil_wetness_5cm_below  surface_soil_wetness_to_bedrock  \\\n",
+       "0                            0.12                             0.38   \n",
+       "1                            0.31                             0.37   \n",
+       "2                            0.26                             0.35   \n",
+       "3                            0.17                             0.34   \n",
+       "4                            0.15                             0.36   \n",
        "\n",
-       "   wind_speed_2m_mean_y wind_speed_2m_max_mean_y wind_speed_10m_mean_y  \\\n",
-       "0              1.410000                 3.090000              1.895000   \n",
-       "1              1.933913                 3.914783              2.865217   \n",
-       "2              1.733846                 2.986154              2.993846   \n",
-       "3              1.250000                 2.980000              1.880000   \n",
-       "4              3.090000                 5.055000              4.265000   \n",
+       "  wind_speed_2m_mean  wind_speed_2m_max_mean wind_speed_10m_mean  \\\n",
+       "0           1.410000                3.090000            1.895000   \n",
+       "1           1.933913                3.914783            2.865217   \n",
+       "2           1.733846                2.986154            2.993846   \n",
+       "3           1.250000                2.980000            1.880000   \n",
+       "4           3.090000                5.055000            4.265000   \n",
        "\n",
-       "   wind_speed_10m_max_mean_y humidity_mean_y temp_2m_mean_y  rain_sum  \n",
-       "0                   4.180000       13.210000      29.900000      2.60  \n",
-       "1                   5.237174        5.657391      23.396304     12.62  \n",
-       "2                   4.754615        4.731538      16.121538     27.78  \n",
-       "3                   4.020000        2.560000       5.480000      0.00  \n",
-       "4                   6.800000        9.950000      31.235000      0.58  \n",
+       "  wind_speed_10m_max_mean  humidity_mean temp_2m_mean rain_sum  \n",
+       "0                4.180000      13.210000    29.900000     2.60  \n",
+       "1                5.237174       5.657391    23.396304    12.62  \n",
+       "2                4.754615       4.731538    16.121538    27.78  \n",
+       "3                4.020000       2.560000     5.480000     0.00  \n",
+       "4                6.800000       9.950000    31.235000     0.58  \n",
        "\n",
-       "[5 rows x 43 columns]"
+       "[5 rows x 37 columns]"
       ]
      },
      "execution_count": 2,
