cleaning up modeling notebooks

--- a/src/03_modeling/JA_modeling(allfires).ipynb
+++ b/src/03_modeling/JA_modeling(allfires).ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ad04f99f-ee30-4525-ba22-2ead3ab17406",
+   "metadata": {},
+   "source": [
+    "# Modeling All the Fire Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "fb8fad32-9541-4cec-8c21-0584e8bf6bc9",
@@ -378,6 +386,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "526889da-a60a-43ff-9bcf-710ceb5d1db0",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "######\n",
+    "### Investigating Correlation Between the Features and Target (DailyAcres) \n",
+    "######\n",
+    "___"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "02ea4d04-4036-467e-bb91-315ade08b160",
@@ -415,6 +435,18 @@
     "            vmax = 1, \n",
     "            cmap = 'coolwarm',\n",
     "            annot = True);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab0c1d2b-7162-4a9f-a5c6-7bde3e07fc60",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "######\n",
+    "### Briefly Investigating Correlation Between the Features and Target (DailyAcres) for Fires Equal to / Over 1 Acre\n",
+    "######\n",
+    "___"
    ]
   },
   {
@@ -487,6 +519,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8cc95356-f575-4c22-baef-2529a23da2d0",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "######\n",
+    "### Feature Selection, Train/Test Splitting Data, and Standard Scaling\n",
+    "######\n",
+    "___"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "a046d9da-ced0-48e5-aa3a-d7a9178b2f20",
@@ -523,6 +567,18 @@
     "ss = StandardScaler()\n",
     "X_train = ss.fit_transform(X_train)\n",
     "X_test = ss.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7471dd0-269f-4f71-980e-3d9fc6584734",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "######\n",
+    "### Using PCA For Feature Elimination\n",
+    "######\n",
+    "___"
    ]
   },
   {
@@ -579,10 +635,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Saving the PCA data for investigations in Neural Nets\n",
     "np.savetxt('../../data/processed/Z_train.csv', Z_train, delimiter=',')\n",
     "np.savetxt('../../data/processed/Z_test.csv', Z_test, delimiter=',')\n",
     "np.savetxt('../../data/processed/y_train.csv', y_train, delimiter=',')\n",
     "np.savetxt('../../data/processed/y_test.csv', y_test, delimiter=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af879ebc-cf6b-406f-8b2f-fbeb18f579c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "---\n",
+    "######\n",
+    "### Modeling  \n",
+    "######\n",
+    "___"
    ]
   },
   {
