Removed invalid lat long

--- a/src/01_cleaning_eda/bt_cleaning.ipynb
+++ b/src/01_cleaning_eda/bt_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "4  40.602563 -115.719777   1    NaN      NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "0                       4.18          13.21          29.9  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
        "4                               0.36  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
        "[1 rows x 36 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,8 +866,50 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "Drop invalid lat long\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wrong_lat_long = [\n",
+    "    748,\n",
+    "    967,\n",
+    "    3462,\n",
+    "    3501,\n",
+    "    4010,\n",
+    "    5067,\n",
+    "    5148,\n",
+    "    5642,\n",
+    "    6740,\n",
+    "    7809,\n",
+    "    9293,\n",
+    "    10254,\n",
+    "    11920,\n",
+    "    13328,\n",
+    "    13802,\n",
+    "    15195,\n",
+    "    15601,\n",
+    "    16424,\n",
+    "    17029,\n",
+    "    19384,\n",
+    "    19768,\n",
+    "    20767,\n",
+    "]\n",
+    "merged_df = merged_df[~merged_df.index.isin(wrong_lat_long)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,16 +918,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(21537, 36)"
+       "(21518, 36)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +1013,7 @@
        "0               135.5                 2.55  40.602563 -115.719777   1  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1103,7 @@
        "0                                        135.5                      2.55   1  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1082,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1142,7 @@
        "(2858, 6)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1286,7 @@
        "[1 rows x 36 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1264,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1273,16 +1315,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2858, 42)"
+       "(2850, 42)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1293,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -1316,7 +1358,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1327,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1420,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1397,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1406,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -1415,7 +1457,7 @@
        "(2109, 42)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1426,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1444,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -1489,7 +1531,7 @@
        "0   1     84.37      1.32"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1501,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1511,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1520,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1777,7 +1819,7 @@
        "[5 rows x 44 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1788,19 +1830,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
     "merged_df.reset_index().to_csv('../../data/processed/bigger_wildfire_weather_extra_180d.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
