cleaned up wildfire_data collection notebook

--- a/src/01_cleaning_eda/JA_Cleaning.ipynb
+++ b/src/01_cleaning_eda/JA_Cleaning.ipynb
@@ -14,9 +14,7 @@
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import json\n",
-    "import missingno as msno\n",
-    "from sklearn.experimental import enable_iterative_imputer\n",
-    "from sklearn.impute import IterativeImputer"
+    "import missingno as msno"
    ]
   },
   {
@@ -40,21 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ae75ecaa-13e5-42c7-8452-7891b7ff56c8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loc_df['FireDiscoveryDateTime'] = pd.to_datetime(loc_df['FireDiscoveryDateTime'])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "id": "b6b4d53e-8222-49fd-a5ca-18fe7803a86e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "loc_df['FireDiscoveryDateTime'] = pd.to_datetime(loc_df['FireDiscoveryDateTime'])\n",
     "loc_df = loc_df[loc_df['FireDiscoveryDateTime']>='2020-01-01']\n",
     "loc_df = loc_df[loc_df['IncidentTypeCategory'] == 'WF']"
    ]
