deleted elevation notebook, added regenerated wildfire tables, put wildfire cleaning into master notebook, created meteorology master notebook

--- a/src/00_collect_data/ms_landcover_data_collection.ipynb
+++ b/src/00_collect_data/ms_landcover_data_collection.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Land Cover Data Collection\n",
     "For land cover data collection we used [GAP/LANDFIRE National Terrestrial Ecosystems 2011](https://www.sciencebase.gov/catalog/item).\n",
-    "> The GAP/LANDFIRE National Terrestrial Ecosystems data set includes detailed vegetation and land cover patterns for the continental United States. The data set incorporates the Ecological System classification system developed by NatureServe to represent natural and semi-natural vegetation. The 584 unique classes in the data set can be displayed at three levels of detail, from general (8 classes) to most detailed. The data set can be used to identify those places in the country with sufficient habitat to support wildlife, a key step in developing sound conservation plans. \n",
+    "> The GAP/LANDFIRE National Terrestrial Ecosystems dataset includes detailed vegetation and land cover patterns for the continental United States. The data set incorporates the Ecological System classification system developed by NatureServe to represent natural and semi-natural vegetation. The 584 unique classes in the data set can be displayed at three levels of detail, from general (8 classes) to most detailed. The data set can be used to identify those places in the country with sufficient habitat to support wildlife, a key step in developing sound conservation plans. \n",
     "[**source**](https://www.usgs.gov/programs/gap-analysis-project/science/land-cover-data-overview)  \n",
     "  \n",
     ">> Citation: U.S. Geological Survey (USGS) Gap Analysis Project (GAP), 2016, GAP/LANDFIRE National Terrestrial Ecosystems 2011: U.S. Geological Survey data release, https://doi.org/10.5066/F7ZS2TM0."
@@ -252,14 +252,14 @@
    "id": "f26415ef-731a-486f-90e0-0d1943c5973a",
    "metadata": {},
    "source": [
-    "To get the land cover categories for wildfire locations I did some reprocessing in open source GIS software [QGIS](https://www.qgis.org/en/site/). During data collection, I first converted raster resolution (pixel size) from 30 meters to 1 kilometer, so the most frequent (mode) category of original land cover was assigned to a cell in a generated lower resolution dataset.\n",
+    "To get the land cover categories for wildfire locations I did some preprocessing in open source GIS software [QGIS](https://www.qgis.org/en/site/). During data collection, I first converted raster resolution (pixel size) from 30 meters to 1 kilometer, so the most frequent (mode) category of original land cover was assigned to a cell of a lower resolution dataset.\n",
     "   \n",
     "Source Resolution:   \n",
     "![Initial Resolution](../../public/images/land_cover_source_resolution.png)  \n",
     "Processed Resolution. \n",
     "![Initial Resolution](../../public/images/land_cover_processed_resolution.png)  \n",
     "  \n",
-    "Based on the spatial intersection of wildfire locations and land cover values, I generated a dataset with two columns: fire id and land cover category in the given location. "
+    "Then, based on the spatial intersection of wildfire locations and land cover values, I generated a dataset with two columns: fire id and land cover category in the given location. "
    ]
   },
   {
