--- a/src/00_collect_data/ms_meteo_data.ipynb
+++ b/src/00_collect_data/ms_meteo_data.ipynb
@@ -32,7 +32,7 @@
     "The difference between two models is that MERRA-2 is better postprocessed, but not available for the last 1-2 months. Wildfires data covers a range from from July 2020 to January 2023, so probably s couple of the most recent observations came from GEOS FP-IT model because the meteorological data was queried on 01-02-2023.\n",
     "\n",
     "POWER data has global coverage and organized as a grid:\n",
-    "* For the meteorological data sets resolutions are ½° latitude by ⅝° longitude (~50 km)\n",
+    "* For the meteorological datasets spatial resolutions (grid cell size) are ½° latitude by ⅝° longitude (~50 km)\n",
     "* Precipitation resolution is 0.1° x 0.1 (10 km)\n",
     "\n",
     "More details on data are available on NASA POWER documentation [page](https://power.larc.nasa.gov/docs/methodology/meteorology/)."
