--- a/src/02_processing/ms_processing.ipynb
+++ b/src/02_processing/ms_processing.ipynb
@@ -23,6 +23,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "0917b35a-a220-4366-a614-7d18afb51dfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import of wildfires data so we have start date of the fire\n",
+    "fires = pd.read_csv('../../data/')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "2708f388-24c5-4884-a44a-f56bc6540ef6",
    "metadata": {},
@@ -294,7 +305,7 @@
    ],
    "source": [
     "# Processing data so we have a sum of snow and rain for the 6 previous months before the fire started\n",
-    "precip = pd.read_csv('../../data/raw/nasa_weather_last_180days.csv')\n",
+    "precip = pd.read_csv('../../data/raw/nasa_weather_last_180days.csv') # import of historical precipitation data gathered by POWER API\n",
     "precip.head(10)"
    ]
   },
