--- a/src/00_collect_data/ms_landcover_data_collection.ipynb
+++ b/src/00_collect_data/ms_landcover_data_collection.ipynb
@@ -26,7 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
+   "id": "6c94b2f8-f2c2-4416-a8b6-af99d5ae202a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import pandas\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "3c69182c-15fb-4d47-b6a4-9ee91c63d1ac",
    "metadata": {},
    "outputs": [
@@ -237,7 +248,7 @@
        "4       South Florida Hardwood Hammock   1.A.1.EaM134G765E5  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "e3e6ce14-03e9-4089-8ad2-7a110dac520a",
    "metadata": {},
    "outputs": [
@@ -371,7 +382,7 @@
        "[21541 rows x 2 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,39 +399,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "ea14e8b0-ba3b-43dc-a7c3-2b2edc7bc75b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/33/gxsl6tm53sl1wjmxq6vld6c80000gn/T/ipykernel_28711/3633084977.py:12: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  landcover_points['landcover_class'] = landcover_points['landcover_class'].astype(int)\n"
+     ]
+    }
+   ],
    "source": [
     "# Fixing columns names\n",
-    "landcover_points.columns = ['fire_id', 'land_cover_class']\n",
+    "landcover_points.columns = ['fire_id', 'landcover_class']\n",
     "\n",
     "# Correcting fire id column\n",
     "landcover_points['fire_id'] = landcover_points['fire_id'] - 1\n",
     "\n",
-    "# Some of the fires had incorrect InitialLatitude and InitialLongitude, so they didn't match any ;and cover categories. \n",
+    "# Some of the fires were outside US so they didn't match any land cover categories. \n",
     "# Dropping those\n",
     "landcover_points = landcover_points.dropna()\n",
     "\n",
     "# land_cover_class: Converting floats to integers since they're classes\n",
-    "landcover_points['land_cover_class'] = landcover_points['land_cover_class'].astype(int)"
+    "landcover_points['landcover_class'] = landcover_points['landcover_class'].astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "id": "1cf80139-78a9-4002-9121-9c8cbf700e82",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Saving processed dataset\n",
-    "landcover_points.to_csv('../../data/cleaned/land_cover.csv')"
+    "landcover_points.to_csv('../../data/cleaned/landcover.csv', index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "id": "5ae42a25-3c69-4aa6-ad85-de28b72b6ded",
    "metadata": {},
    "outputs": [
@@ -428,8 +452,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/33/gxsl6tm53sl1wjmxq6vld6c80000gn/T/ipykernel_24449/4154975565.py:2: FutureWarning: The behavior of `series[i:j]` with an integer-dtype index is deprecated. In a future version, this will be treated as *label-based* indexing, consistent with e.g. `series[i]` lookups. To retain the old behavior, use `series.iloc[i:j]`. To get the future behavior, use `series.loc[i:j]`.\n",
-      "  landcover_points.land_cover_class.value_counts()[:5].plot(kind = 'bar', color = '#D62F29');\n"
+      "/var/folders/33/gxsl6tm53sl1wjmxq6vld6c80000gn/T/ipykernel_28711/652519692.py:2: FutureWarning: The behavior of `series[i:j]` with an integer-dtype index is deprecated. In a future version, this will be treated as *label-based* indexing, consistent with e.g. `series[i]` lookups. To retain the old behavior, use `series.iloc[i:j]`. To get the future behavior, use `series.loc[i:j]`.\n",
+      "  landcover_points.landcover_class.value_counts()[:5].plot(kind = 'bar', color = '#D62F29');\n"
      ]
     },
     {
@@ -445,12 +469,12 @@
    ],
    "source": [
     "# Looking at most frequent categories\n",
-    "landcover_points.land_cover_class.value_counts()[:5].plot(kind = 'bar', color = '#D62F29');"
+    "landcover_points.landcover_class.value_counts()[:5].plot(kind = 'bar', color = '#D62F29');"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "id": "a881dfa1-ec8a-42a1-a43b-c5b54b703208",
    "metadata": {},
    "outputs": [
@@ -499,7 +523,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>158</th>\n",
+       "      <th>157</th>\n",
        "      <td>158</td>\n",
        "      <td>54321585</td>\n",
        "      <td>0.000000</td>\n",
@@ -522,7 +546,7 @@
        "      <td>1.B.2.NbM022G228E158</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>187</th>\n",
+       "      <th>186</th>\n",
        "      <td>187</td>\n",
        "      <td>107223349</td>\n",
        "      <td>0.349020</td>\n",
@@ -545,7 +569,7 @@
        "      <td>1.B.2.NcM027G250E187</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>489</th>\n",
+       "      <th>488</th>\n",
        "      <td>489</td>\n",
        "      <td>187305620</td>\n",
        "      <td>0.811760</td>\n",
@@ -568,7 +592,7 @@
        "      <td>3.B.1.NeM169G302E489</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>556</th>\n",
+       "      <th>555</th>\n",
        "      <td>556</td>\n",
        "      <td>1532431380</td>\n",
        "      <td>0.960784</td>\n",
@@ -591,7 +615,7 @@
        "      <td>7.AE556</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>557</th>\n",
+       "      <th>556</th>\n",
        "      <td>557</td>\n",
        "      <td>655777154</td>\n",
        "      <td>0.996080</td>\n",
@@ -619,63 +643,63 @@
       ],
       "text/plain": [
        "     Value       Count       RED     GREEN     BLUE  CL  \\\n",
-       "158    158    54321585  0.000000  0.388240  0.07843   1   \n",
-       "187    187   107223349  0.349020  0.490200  0.08627   1   \n",
-       "489    489   187305620  0.811760  0.819610  0.65882   3   \n",
-       "556    556  1532431380  0.960784  0.960784  0.86275   7   \n",
-       "557    557   655777154  0.996080  0.996080  0.75686   7   \n",
+       "157    158    54321585  0.000000  0.388240  0.07843   1   \n",
+       "186    187   107223349  0.349020  0.490200  0.08627   1   \n",
+       "488    489   187305620  0.811760  0.819610  0.65882   3   \n",
+       "555    556  1532431380  0.960784  0.960784  0.86275   7   \n",
+       "556    557   655777154  0.996080  0.996080  0.75686   7   \n",
        "\n",
        "                               NVC_CLASS   SC  \\\n",
-       "158                    Forest & Woodland  1.B   \n",
-       "187                    Forest & Woodland  1.B   \n",
-       "489                 Desert & Semi-Desert  3.B   \n",
+       "157                    Forest & Woodland  1.B   \n",
+       "186                    Forest & Woodland  1.B   \n",
+       "488                 Desert & Semi-Desert  3.B   \n",
+       "555  Agricultural & Developed Vegetation  7.B   \n",
        "556  Agricultural & Developed Vegetation  7.B   \n",
-       "557  Agricultural & Developed Vegetation  7.B   \n",
        "\n",
        "                                NVC_SUBCL    FRM  \\\n",
-       "158  Temperate & Boreal Forest & Woodland  1.B.2   \n",
-       "187  Temperate & Boreal Forest & Woodland  1.B.2   \n",
-       "489    Cool Semi-Desert Scrub & Grassland  3.B.1   \n",
-       "556    Herbaceous Agricultural Vegetation  7.B.1   \n",
-       "557    Herbaceous Agricultural Vegetation  7.B.2   \n",
+       "157  Temperate & Boreal Forest & Woodland  1.B.2   \n",
+       "186  Temperate & Boreal Forest & Woodland  1.B.2   \n",
+       "488    Cool Semi-Desert Scrub & Grassland  3.B.1   \n",
+       "555    Herbaceous Agricultural Vegetation  7.B.1   \n",
+       "556    Herbaceous Agricultural Vegetation  7.B.2   \n",
        "\n",
        "                                      NVC_FORM       DIV  \\\n",
-       "158           Cool Temperate Forest & Woodland  1.B.2.Nb   \n",
-       "187           Cool Temperate Forest & Woodland  1.B.2.Nc   \n",
-       "489         Cool Semi-Desert Scrub & Grassland  3.B.1.Ne   \n",
-       "556  Row & Close Grain Crop Cultural Formation     7.B.1   \n",
-       "557                   Pasture & Hay Field Crop     7.B.2   \n",
+       "157           Cool Temperate Forest & Woodland  1.B.2.Nb   \n",
+       "186           Cool Temperate Forest & Woodland  1.B.2.Nc   \n",
+       "488         Cool Semi-Desert Scrub & Grassland  3.B.1.Ne   \n",
+       "555  Row & Close Grain Crop Cultural Formation     7.B.1   \n",
+       "556                   Pasture & Hay Field Crop     7.B.2   \n",
        "\n",
        "                                               NVC_DIV MACRO_CD  \\\n",
-       "158    Rocky Mountain Cool Temperate Forest & Woodland     M022   \n",
-       "187  Western North American Cool Temperate Woodland...     M027   \n",
-       "489  Western North American Cool Semi-Desert Scrub ...     M169   \n",
-       "556                 Herbaceous Agricultural Vegetation    7.B.1   \n",
-       "557                           Pasture & Hay Field Crop    7.B.2   \n",
+       "157    Rocky Mountain Cool Temperate Forest & Woodland     M022   \n",
+       "186  Western North American Cool Temperate Woodland...     M027   \n",
+       "488  Western North American Cool Semi-Desert Scrub ...     M169   \n",
+       "555                 Herbaceous Agricultural Vegetation    7.B.1   \n",
+       "556                           Pasture & Hay Field Crop    7.B.2   \n",
        "\n",
        "                                             NVC_MACRO     GR  \\\n",
-       "158       Southern Rocky Mountain Lower Montane Forest   G228   \n",
-       "187  Southern Rocky Mountain & Colorado Plateau Two...   G250   \n",
-       "489  Great Basin-Intermountain Tall Sagebrush Stepp...   G302   \n",
-       "556                 Herbaceous Agricultural Vegetation  7.B.1   \n",
-       "557                           Pasture & Hay Field Crop  7.B.2   \n",
+       "157       Southern Rocky Mountain Lower Montane Forest   G228   \n",
+       "186  Southern Rocky Mountain & Colorado Plateau Two...   G250   \n",
+       "488  Great Basin-Intermountain Tall Sagebrush Stepp...   G302   \n",
+       "555                 Herbaceous Agricultural Vegetation  7.B.1   \n",
+       "556                           Pasture & Hay Field Crop  7.B.2   \n",
        "\n",
        "                                             NVC_GROUP  LEVEL3  \\\n",
-       "158  Southern Rocky Mountain Ponderosa Pine Forest ...    4530   \n",
-       "187         Colorado Plateau Pinyon - Juniper Woodland    4512   \n",
-       "489  Intermountain Mesic Tall Sagebrush Steppe & Sh...    5706   \n",
-       "556          Row & Close Grain Crop Cultural Formation    1402   \n",
-       "557                           Pasture & Hay Field Crop    1403   \n",
+       "157  Southern Rocky Mountain Ponderosa Pine Forest ...    4530   \n",
+       "186         Colorado Plateau Pinyon - Juniper Woodland    4512   \n",
+       "488  Intermountain Mesic Tall Sagebrush Steppe & Sh...    5706   \n",
+       "555          Row & Close Grain Crop Cultural Formation    1402   \n",
+       "556                           Pasture & Hay Field Crop    1403   \n",
        "\n",
        "                                          ECOLSYS_LU                NVCMES  \n",
-       "158  Southern Rocky Mountain Ponderosa Pine Woodland  1.B.2.NbM022G228E158  \n",
-       "187         Colorado Plateau Pinyon-Juniper Woodland  1.B.2.NcM027G250E187  \n",
-       "489    Inter-Mountain Basins Big Sagebrush Shrubland  3.B.1.NeM169G302E489  \n",
-       "556                              Cultivated Cropland               7.AE556  \n",
-       "557                                      Pasture/Hay               7.AE557  "
+       "157  Southern Rocky Mountain Ponderosa Pine Woodland  1.B.2.NbM022G228E158  \n",
+       "186         Colorado Plateau Pinyon-Juniper Woodland  1.B.2.NcM027G250E187  \n",
+       "488    Inter-Mountain Basins Big Sagebrush Shrubland  3.B.1.NeM169G302E489  \n",
+       "555                              Cultivated Cropland               7.AE556  \n",
+       "556                                      Pasture/Hay               7.AE557  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
